--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,11 @@
 {
-    "extends": [
-        "react-app", 
-        "plugin:prettier/recommended"
-    ], 
-    "prettier/prettier":[
+    "extends": ["react-app", "plugin:prettier/recommended"],
+    "rules": {
+      "prettier/prettier": [
         "error",
-        {
-            "endOfLine": "auto"
-        }
-    ]
-}
+         { 
+            "endOfLine": "auto" 
+            }]
+    }
+  }
+  
